--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: Mental Health Resources @ UIUC
+description: A guide to mental health resources at UIUC with crowdsourced anecdotal advice.
 remote-theme: pmarsceill/just-the-docs
-color_scheme: "dark"
 search_enabled: false
