--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: Mental Health Resources @ UIUC
 description: A guide to mental health resources at UIUC with crowdsourced anecdotal advice.
+remote-theme:  pmarsceill/just-the-docs 
 search_enabled: false
+
