--- a/mh-resources/_config.yml
+++ b/mh-resources/_config.yml
@@ -18,29 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mental Health Resources @ UIUC
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A student created guide to mental health resources at UIUC with crowdsourced anecdotal advice.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-toc
-
-header_pages:
-  - index.md
-  - DRES.md
-  - contributing.md
-
-defaults:
-- scope:
-    path: ""
-  values:
-    toc: true
-    layout: page
 
 # Exclude from processing.
 # The following items will not be processed, by default.
